--- a/app/src/main/res/layout/single_item_pharmacy_notification.xml
+++ b/app/src/main/res/layout/single_item_pharmacy_notification.xml
@@ -40,6 +40,7 @@
             android:textSize="13sp"
             android:layout_below="@+id/reply_now_btn"
             android:layout_alignParentEnd="true"
+            android:visibility="gone"
             />
 
     </RelativeLayout>
