--- a/app/src/main/res/layout/single_item_pharmacy_requests.xml
+++ b/app/src/main/res/layout/single_item_pharmacy_requests.xml
@@ -76,6 +76,7 @@
                     android:textSize="14sp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
+                    android:visibility="invisible"
                     />
 
             </RelativeLayout>
